# CICD_fixer

./: .cicd-fixer.yml  .gitignore  README.md  pyproject.toml  requirements.txt
ci-agent/agent/: config_loader.py  exit_handler.py  file_loader.py  main.py  secrets_redactor.py
ci-agent/agent/analyzers/: caching_analyzer.py  dag_analyzer.py
ci-agent/agent/fixers/: caching_fixer.py  parallelizer.py  step_reorderer.py  yaml_fixer.py
ci-agent/agent/output/: autofix_handler.py  suggestion_formatter.py
ci-agent/agent/parsers/: yaml_parser.py
ci-agent/cli/: cli_entry.py
ci-agent/examples/sample_workflows/: unoptimized.yml
docs/: file_structure.md  immediate_next_steps.md  implementation_plan_alpha.md
documentation/: ci_optimizer_agent_design.md  ci_optimizer_agent_prd.md  ci_optimizer_checklist.md
